Изменена коллекция для истории задач, пара мелких исправлений