@@ -3,27 +3,26 @@ package manager;
 import tasks.Task;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-    private ArrayList<Task> history;
+    private LinkedList<Task> history;
 
     public InMemoryHistoryManager() {
-        this.history = new ArrayList<>();
+        this.history = new LinkedList<>();
     }
 
     @Override
-    public ArrayList<Task> getHistory() {
+    public LinkedList<Task> getHistory() {
         return history;
     }
 
     @Override
     public void add(Task task) {
         if (history.size() >= 10) {
-            history.remove(0);
+            history.removeFirst();
         }
-        history.add(task);
+        history.addLast(task);
     }
-
-
 }
